--- a/overlays/dev/kustomization.yaml
+++ b/overlays/dev/kustomization.yaml
@@ -12,6 +12,7 @@ resources:
   - ../../base/observability/grafana
   - ../../base/observability/loki
   - ../../base/observability/prometheus
+  - ../../base/observability/tempo
   - ../../base/order/
 
 patches:
