--- a/base/order/deployment.yaml
+++ b/base/order/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: order-service
-          image: order-service:1.0.3
+          image: order-service:1.0.4
           imagePullPolicy: Never
           resources:
             limits:
@@ -53,6 +53,11 @@ spec:
               valueFrom:
                 configMapKeyRef:
                   key: LOKI_URI
+                  name: order-service-config
+            - name: TEMPO_URI
+              valueFrom:
+                configMapKeyRef:
+                  key: TEMPO_URI
                   name: order-service-config
           startupProbe:
             httpGet:
